DigicielFull/force-app/main/default/objects/Account/fields/Subscriber_No_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_No_Assigned__c</fullName>
    <label>Subscriber No. Assigned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>