DigicielFull/force-app/main/default/objects/Account/fields/System_Type__c.field-meta.xml
<CustomField>
    <fullName>System_Type__c</fullName>
    <label>System Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>