DigicielFull/force-app/main/default/objects/Account/fields/Target_Total_Account__c.field-meta.xml
<CustomField>
    <fullName>Target_Total_Account__c</fullName>
    <label>New Business Requirement</label>
    <summarizedField>Backlog__c.Target__c</summarizedField>
    <summaryForeignKey>Backlog__c.Account_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>