DigicielFull/force-app/main/default/objects/Account/fields/TelesoftNumber__c.field-meta.xml
<CustomField>
    <fullName>TelesoftNumber__c</fullName>
    <label>N° DBS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>