DigicielFull/force-app/main/default/objects/Account/fields/Tonga_Segment__c.field-meta.xml
<CustomField>
    <fullName>Tonga_Segment__c</fullName>
    <label>Tonga Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ICT</fullName>
            </value>
            <value>
                <fullName>GSM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>