DigicielFull/force-app/main/default/objects/Account/fields/Total_BB_Data_Subscribers__c.field-meta.xml
<CustomField>
    <fullName>Total_BB_Data_Subscribers__c</fullName>
    <label>Total BB/Data Subscribers</label>
    <summarizedField>Opportunity.GPRS__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>