DigicielFull/force-app/main/default/objects/Account/fields/Total_Blended_Subscribers__c.field-meta.xml
<CustomField>
    <fullName>Total_Blended_Subscribers__c</fullName>
    <label>Total Blended Subscribers</label>
    <summarizedField>Opportunity.Blended_Subscribers__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>