DigicielFull/force-app/main/default/objects/Account/fields/Total_Debt__c.field-meta.xml
<CustomField>
    <fullName>Total_Debt__c</fullName>
    <description>used by the Jamaica revenue assurance team to track bad debt across the account base</description>
    <label>Total Debt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>