DigicielFull/force-app/main/default/objects/Account/fields/Total_Facture_Telesoft__c.field-meta.xml
<CustomField>
    <fullName>Total_Facture_Telesoft__c</fullName>
    <label>Total ICT-Digicel</label>
    <summarizedField>Invoice__c.AmountTTC__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice__c.TechMoreOlderThen12Months__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Invoice__c.Source__c</field>
        <operation>equals</operation>
        <value>Telesoft</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.AccountName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>