DigicielFull/force-app/main/default/objects/Account/fields/Total_Non_Blackberry_Data_Subscribers__c.field-meta.xml
<CustomField>
    <fullName>Total_Non_Blackberry_Data_Subscribers__c</fullName>
    <label>Total Non Blackberry Data Subscribers</label>
    <summarizedField>Opportunity.Non_Blackberry_Data__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>