DigicielFull/force-app/main/default/objects/Account/fields/Total_of_Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Won_Opportunities__c</fullName>
    <description>This field shows the number of opportunities that have been closed won/billed</description>
    <label>Total # of Won Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>