DigicielFull/force-app/main/default/objects/Account/fields/TotalofOpps__c.field-meta.xml
<CustomField>
    <fullName>TotalofOpps__c</fullName>
    <label>Total #  of Opps</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>