DigicielFull/force-app/main/default/objects/Account/fields/Trend_Acct_Exec__c.field-meta.xml
<CustomField>
    <fullName>Trend_Acct_Exec__c</fullName>
    <label>Trend Acct Exec</label>
    <length>40</length>
    <type>Text</type>
</CustomField>