DigicielFull/force-app/main/default/objects/Account/fields/True_Account__c.field-meta.xml
<CustomField>
    <fullName>True_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>True Account</label>
    <type>Checkbox</type>
</CustomField>