DigicielFull/force-app/main/default/objects/Account/fields/Typical_Monthly_Spend__c.field-meta.xml
<CustomField>
    <fullName>Typical_Monthly_Spend__c</fullName>
    <label>Typical Monthly Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>