DigicielFull/force-app/main/default/objects/Account/fields/UltimateCustomerID__c.field-meta.xml
<CustomField>
    <fullName>UltimateCustomerID__c</fullName>
    <formula>BLANKVALUE(Parent.Parent.Parent.Parent.Parent.Name,
BLANKVALUE(Parent.Parent.Parent.Parent.Name,
BLANKVALUE(Parent.Parent.Parent.Name,
BLANKVALUE(Parent.Parent.Name,
BLANKVALUE(Parent.Name,
CustomerID__c )))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ultimate Customer ID</label>
    <type>Text</type>
</CustomField>