DigicielFull/force-app/main/default/objects/Account/fields/UltimateParentAccountID__c.field-meta.xml
<CustomField>
    <fullName>UltimateParentAccountID__c</fullName>
    <formula>BLANKVALUE(Parent.Parent.Parent.Parent.Parent.Id,
BLANKVALUE(Parent.Parent.Parent.Parent.Id,
BLANKVALUE(Parent.Parent.Parent.Id,
BLANKVALUE(Parent.Parent.Id,
BLANKVALUE(Parent.Id,
Id )))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ultimate Parent Account  ID</label>
    <type>Text</type>
</CustomField>