DigicielFull/force-app/main/default/objects/Account/fields/UltimateParentAccountLink__c.field-meta.xml
<CustomField>
    <fullName>UltimateParentAccountLink__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; + 
BLANKVALUE(Parent.Parent.Parent.Parent.Parent.Parent.Id, 
BLANKVALUE(Parent.Parent.Parent.Parent.Parent.Id, 
BLANKVALUE(Parent.Parent.Parent.Parent.Id, 
BLANKVALUE(Parent.Parent.Parent.Id, 
BLANKVALUE(Parent.Parent.Id, 
BLANKVALUE(Parent.Id, 
Null)))))), 
BLANKVALUE(Parent.Parent.Parent.Parent.Parent.Parent.Name, 
BLANKVALUE(Parent.Parent.Parent.Parent.Parent.Name, 
BLANKVALUE(Parent.Parent.Parent.Parent.Name, 
BLANKVALUE(Parent.Parent.Parent.Name, 
BLANKVALUE(Parent.Parent.Name, 
BLANKVALUE(Parent.Name,
Null)))))))</formula>
    <inlineHelpText>This field shows the very top level Account in an Account Hierarchy.  Account Hierarchies cannot exceed 5 child accounts.</inlineHelpText>
    <label>Ultimate Parent Account (Link)</label>
    <type>Text</type>
</CustomField>