DigicielFull/force-app/main/default/objects/Account/fields/USD_Client_s_Annual_Marketing_Budget__c.field-meta.xml
<CustomField>
    <fullName>USD_Client_s_Annual_Marketing_Budget__c</fullName>
    <label>USD$ Client’s Annual Marketing Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>