DigicielFull/force-app/main/default/objects/Account/fields/USD_Q1_Spend_by_Product__c.field-meta.xml
<CustomField>
    <fullName>USD_Q1_Spend_by_Product__c</fullName>
    <label>USD$ Q1 Spend by Product</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>