DigicielFull/force-app/main/default/objects/Account/fields/VAT_Registration_No__c.field-meta.xml
<CustomField>
    <fullName>VAT_Registration_No__c</fullName>
    <label>VAT Registration No.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>