DigicielFull/force-app/main/default/objects/Account/recordTypes/Digicel_Person_Account.recordType-meta.xml
<RecordType>
    <fullName>Digicel_Person_Account</fullName>
    <active>true</active>
    <description>Used for only Residential Customers</description>
    <label>Digicel Person Account</label>
</RecordType>