DigicielFull/force-app/main/default/objects/Account/recordTypes/Digicel_PNG.recordType-meta.xml
<RecordType>
    <fullName>Digicel_PNG</fullName>
    <active>true</active>
    <label>Digicel PNG</label>
</RecordType>