DigicielFull/force-app/main/default/objects/Account/recordTypes/Digicel_PNG_Archive.recordType-meta.xml
<RecordType>
    <fullName>Digicel_PNG_Archive</fullName>
    <active>true</active>
    <description>PNG archive Accounts</description>
    <label>Digicel PNG Archive</label>
</RecordType>