DigicielFull/force-app/main/default/objects/Account/recordTypes/Digicel_Regional_Account.recordType-meta.xml
<RecordType>
    <fullName>Digicel_Regional_Account</fullName>
    <active>true</active>
    <description>This account record type is used to identify parent accounts at a regional level that will be managed by a group relationship  manager</description>
    <label>Digicel Regional Account</label>
</RecordType>