DigicielFull/force-app/main/default/objects/Account/recordTypes/Digicel_Trends.recordType-meta.xml
<RecordType>
    <fullName>Digicel_Trends</fullName>
    <active>true</active>
    <label>Trend Global</label>
</RecordType>