DigicielFull/force-app/main/default/objects/Account/recordTypes/Partner.recordType-meta.xml
<RecordType>
    <fullName>Partner</fullName>
    <active>true</active>
    <label>Partner</label>
</RecordType>