DigicielFull/force-app/main/default/objects/Account/validationRules/BB_Must_fill_in_GPS_Coordinates.validationRule-meta.xml
<ValidationRule>
    <fullName>BB_Must_fill_in_GPS_Coordinates</fullName>
    <active>true</active>
    <description>All Barbados accounts must have GPS Coordinates entered</description>
    <errorConditionFormula>AND( 
RecordType.Name = &quot;Digicel Barbados&quot;, 
ISBLANK( GPS__c ))</errorConditionFormula>
    <errorDisplayField>GPS__Longitude__s</errorDisplayField>
    <errorMessage>Oops you forgot to enter the GPS Coordinates. 
Barbados coordinates Latitude start with 13 and Longitude start with -59</errorMessage>
</ValidationRule>