DigicielFull/force-app/main/default/objects/Account/validationRules/PNG_MakeAccLevelMandatoryForCustomerAcc.validationRule-meta.xml
<ValidationRule>
    <fullName>PNG_MakeAccLevelMandatoryForCustomerAcc</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Type  ,&apos;Customer&apos;), ISPICKVAL(PNG_Account_Level__c,&apos;&apos;),
RecordType.Id = LEFT( $Label.PNG_AccountRecordTypeId ,15))</errorConditionFormula>
    <errorDisplayField>PNG_Account_Level__c</errorDisplayField>
    <errorMessage>Account Level Must be selected for Accounts of type Customer</errorMessage>
</ValidationRule>