DigicielFull/force-app/main/default/objects/Account/validationRules/Segmentation_Data_Must_Be_Populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Segmentation_Data_Must_Be_Populated</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name = &quot;Digicel Business Account&quot;,
ISPICKVAL( SubIndustry__c , &quot;&quot; ),
ISPICKVAL( Industry , &quot;&quot; ),
ISPICKVAL( Customer_Segment__c , &quot;&quot;),
ISPICKVAL( Account_Category__c , &quot;&quot; ),
ISPICKVAL( CustomerType__c  , &quot;&quot;))

&amp;&amp; $Profile.Name &lt;&gt;&quot;System Admin Jr&quot;
&amp;&amp; $Profile.Name &lt;&gt;&quot;System Administrator&quot;
&amp;&amp; $Profile.Name &lt;&gt;&quot;Group Business Solutions&quot;
&amp;&amp; $Profile.Name &lt;&gt;&quot;Jamaica - ICT/GSM Power User&quot;
&amp;&amp; $Profile.Name &lt;&gt;&quot;Barbados ICT - Manager&quot;
&amp;&amp; $Profile.Name &lt;&gt;&quot;Trinidad ICT&amp;GSM - Power User&quot;
&amp;&amp; $Profile.Name &lt;&gt;&quot;Digicel PNG Sales Operations&quot;
&amp;&amp; $Profile.Name &lt;&gt;&quot;DBS Power User&quot;
&amp;&amp; $Profile.Name &lt;&gt;&quot;PNG - Sales Executive&quot;
&amp;&amp; $Profile.Name &lt;&gt;&quot;PNG - Sales Manager&quot;</errorConditionFormula>
    <errorMessage>You need to update the &quot;Customer Segmentation&quot; section of the account in order to proceed with your changes</errorMessage>
</ValidationRule>