DigicielFull/force-app/main/default/objects/Account/validationRules/validrecord.validationRule-meta.xml
<ValidationRule>
    <fullName>validrecord</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL( Valid_record__c,&quot;&quot;))</errorConditionFormula>
    <errorMessage>Error exception #82o474R73999o000</errorMessage>
</ValidationRule>