DigicielFull/force-app/main/default/objects/Account/listViews/All_PNG_Accounts.listView-meta.xml
<ListView>
    <fullName>All_PNG_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Ban_Number__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Digicel_PNG,PersonAccount.Digicel_PNG_Individual</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>kina</value>
    </filters>
    <label>*All PNG Accounts</label>
    <sharedTo>
        <roleAndSubordinates>PNG</roleAndSubordinates>
    </sharedTo>
</ListView>