DigicielFull/force-app/main/default/objects/Account/listViews/My_Accounts_NEW.listView-meta.xml
<ListView>
    <fullName>My_Accounts_NEW</fullName>
    <columns>Billing_Country__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Registration_Number__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Customer_Segment__c</columns>
    <columns>Account_Category__c</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>SubIndustry__c</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>PARENT_NAME</columns>
    <columns>UltimateParentAccountLink__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Accounts</label>
    <language>en_US</language>
</ListView>