DigicielFull/force-app/main/default/objects/Account/listViews/Regional_Accounts2.listView-meta.xml
<ListView>
    <fullName>Regional_Accounts2</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>(Regional Account)</value>
    </filters>
    <label>Regional Accounts</label>
    <language>en_US</language>
    <sharedTo>
        <role>Digicel_Group_Business_Solutions_C_CA_Region</role>
    </sharedTo>
</ListView>